added reconnect ui  component

--- a/src/weasel.html
+++ b/src/weasel.html
@@ -21,6 +21,9 @@
 			<input type="text" id="protocol" value="" placeholder="ws sub-protocol(s)" title="Sub-Protocols (Comma Separated)">
 			<input type="submit" value="OPEN" title="Open Connection (Ctrl + Alt + Enter)">
 			<input type="button" value="CLOSE">
+			<label>Timeout:</label>
+			<input type="text" id="timeout" value="" placeholder="30" title="Number in seconds">
+			<input type="button" value="RECONNECT">
 		</fieldset>
 	</form>
 	<!-- Terminal! -->
